ui changes; model fixes;

--- a/LIT.Smabu/Client/Pages/Customer/Create.razor
+++ b/LIT.Smabu/Client/Pages/Customer/Create.razor
@@ -21,7 +21,7 @@
                  <MudTextField Label="Name" Required="true" @bind-Value="@model.Name" />
             </MudItem>
             <MudItem xs="12">
-                 <MudButtonGroup Class="mt-6">
+                 <MudButtonGroup Class="mt-6 justify-center d-flex">
                     <MudIconButton Icon="@Icons.Material.Filled.Cancel" Color="Color.Default" Href="/customers" />
                     <MudIconButton Icon="@Icons.Material.Filled.Save" Color="Color.Success" Disabled="@(!success)" OnClick="@SubmitAsync" />
                 </MudButtonGroup>
