--- a/LIT.Smabu/Client/Pages/Offers/Create.razor
+++ b/LIT.Smabu/Client/Pages/Offers/Create.razor
@@ -33,7 +33,7 @@
                 </MudSelect>
             </MudItem>
             <MudItem xs="12">
-                <MudButtonGroup Class="mt-6">
+                <MudButtonGroup Class="mt-6 justify-center d-flex">
                     <MudIconButton Icon="@Icons.Material.Filled.Cancel" Color="Color.Default" Href="/offers" />
                     <MudIconButton Icon="@Icons.Material.Filled.Save" Color="Color.Success" Disabled="@(!success)" OnClick="@SubmitAsync" />
                 </MudButtonGroup>
