--- a/LIT.Smabu/Client/Shared/MainLayout.razor
+++ b/LIT.Smabu/Client/Shared/MainLayout.razor
@@ -21,7 +21,7 @@
         <NavMenu />
     </MudDrawer>
     <MudMainContent>
-        <MudContainer Fixed="true" Class="pt-10 pt-10">
+        <MudContainer Fixed="true" Class="pt-10 pt-10 pb-10">
             @Body
         </MudContainer>
         <MudOverlay Visible="this._isBusyOverlay" DarkBackground="true">
