--- a/LIT.Smabu/Client/Pages/Customer/Edit.razor
+++ b/LIT.Smabu/Client/Pages/Customer/Edit.razor
@@ -72,7 +72,7 @@
                      </MudGrid>
                  </MudItem>
 
-                 <MudItem xs="12" Class="mt-6">
+                 <MudItem xs="12" Class="mt-6 justify-center d-flex">
                      <MudButtonGroup>
                          <MudIconButton Icon="@Icons.Material.Filled.Cancel" Color="Color.Default" Href="/customers" />
                          <MudIconButton Icon="@Icons.Material.Filled.Save" Color="Color.Success" Disabled="@(!success)" OnClick="@SubmitAsync" />
