--- a/LIT.Smabu/Client/Pages/Offers/Create.razor
+++ b/LIT.Smabu/Client/Pages/Offers/Create.razor
@@ -4,6 +4,7 @@
 @using LIT.Smabu.Domain.Shared.Invoices;
 @using LIT.Smabu.Shared.Customers;
 @using Microsoft.AspNetCore.Authorization;
+@using LIT.Smabu.Shared.Invoices;
 @inject HttpClient Http
 @inject PageInfoService pageInfoService;
 @attribute [Authorize]
