--- a/src/LIT.Smabu.Web/Areas/Customers/Pages/Details.cshtml
+++ b/src/LIT.Smabu.Web/Areas/Customers/Pages/Details.cshtml
@@ -7,7 +7,7 @@
 
 <div class="row">
     <div class="col-xs-12 col">
-        <vc:page-header area="Customers" page="Details"
+        <vc:page-header area="Kunden" page="Details"
                         details="@Model.DisplayName">
         </vc:page-header>
     </div>
