--- a/src/LIT.Smabu.Web/Pages/Shared/_Layout.cshtml
+++ b/src/LIT.Smabu.Web/Pages/Shared/_Layout.cshtml
@@ -37,6 +37,7 @@
                         <a class="nav-link text-light" asp-area="" asp-page="/Index">Zahlungsbedingungen</a>
                         </li> *@
                     </ul>
+                    <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
