Import improved; fixes;

--- a/src/LIT.Smabu.Web/Pages/Shared/_Layout.cshtml
+++ b/src/LIT.Smabu.Web/Pages/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - LIT SMABU</title>
+    <title>@ViewData["Title"] - SMABU</title>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/LIT.Smabu.Web.styles.css" asp-append-version="true" />
     <link href="~/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -30,9 +30,9 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-area="invoices" asp-page="Index">Rechnungen</a>
                         </li>
-                        <li class="nav-item">
+@*                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-page="Index">Leistungen</a>
-                        </li>
+                        </li> *@
                @*          <li class="nav-item">
                         <a class="nav-link text-light" asp-area="" asp-page="/Index">Zahlungsbedingungen</a>
                         </li> *@
